--- a/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/components/_headerSearch.scss
+++ b/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/components/_headerSearch.scss
@@ -7,8 +7,7 @@
 
 .site-search {
 
-    .fa-close,
-    .fa-search {
+    .fa-close {
         font-size: 1.125rem;
     }
 
@@ -21,12 +20,20 @@
             position: relative;
             display: block;
             margin: rem(0) rem(10);
+
+            @include media-breakpoint-down(xs) {
+                margin: rem(0) rem(7);
+            }
         }
 
         height: rem(30);
 
         @include media-breakpoint-up(xs) {
-            padding-left: rem(15);
+            padding-left: rem(0);
+        }
+
+        @include media-breakpoint-up(sm) {
+            margin-right: rem(9);
         }
 
         @include media-breakpoint-up(md) {
@@ -43,12 +50,20 @@
 
     .search-recomendation {
 
-        @include media-breakpoint-up(md) {
-            width: rem(280);
+        @include media-breakpoint-down(sm) {
+            width: 97%;
+            margin: 0 auto;
         }
 
-        @include media-breakpoint-down(md) {
-            width: 100%;
+        @include media-breakpoint-down(xs) {
+            width: 96.8%;
+            margin: 0 auto;
+        }
+      
+        @include media-breakpoint-up(custom-md) {
+            width: rem(218);
+            margin-right: rem(10);
+            margin-left: rem(10);
         }
 
         @include media-breakpoint-up(xl) {
@@ -65,7 +80,7 @@
         width: rem(336);
         position: relative;
         z-index: 999;
-        margin-left: rem(10);
+        margin-left: rem(0);
 
         .search-suggestions {
             .category-slot {
@@ -101,31 +116,53 @@
         height: rem(34);
         width: rem(336);
         border-radius: rem(3) rem(3) rem(0) rem(0);
+        border: rem(1) solid $silver;
 
         &::-webkit-input-placeholder {
             color: $grayish-blue;
           }
 
-        @include media-breakpoint-up(md) {
-            border: rem(1) solid $silver;
-            width: rem(280);
+        &:-ms-input-placeholder.form-control{
+            line-height: rem(10);
         }
-        @include media-breakpoint-down(md) {
-            border: rem(1) solid $silver;
+        
+        @include media-breakpoint-down(sm) {
             width: 100%;
         }
+       
+
         @include media-breakpoint-up(custom-md) {
             border: rem(1) solid $silver;
+            width: rem(218);
         }
+          
         @include media-breakpoint-up(xl) {
           width: rem(336);
         }
     }
-    .fa-search {
+    .search-icon {
         top: rem(8);
+        background-image: url(../images/icon-search.svg);
+        background-color: transparent;
+        border: none;
+        outline: none;
+        padding: rem(15) rem(15);
+        background-repeat: no-repeat;
+        background-position: center;
+        position: absolute;
+        right: rem(4);
+        top: rem(3);
 
-        @include media-breakpoint-down(custom-md) {
+        // @include media-breakpoint-between(sm, custom-md) {
+        //     right: rem(28);
+        // }
+
+        @include media-breakpoint-up(sm) {
             right: rem(28);
+        }
+        
+        @include media-breakpoint-up(custom-md) {
+            right: rem(4);
         }
 
         @include media-breakpoint-down(xs) {
